--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Aarón Dávila</h1>
-        <p>Desarrollador Web | Tecnico en Sistemas</p>
+        <p>Desarrollador | Tecnico en Sistemas</p>
     </header>
     <nav>
         <ul>
