--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style1.css">
     <script src="./javascript/script1.js"></script>
-    <title>Document</title>
+    <title>Sobre mi</title>
 </head>
 <body>
     <header>
@@ -17,6 +17,7 @@
             <li><a href="index.html">sobre mi</a></li>
             <li><a href="projectos.html">projectos</a></li>
             <li><a href="contacto.html">contacto</a></li>
+            <li><a href="testimonio.html">testimonios</a></li>
         </ul>
     </nav>
     <aside id="izquierda">
