--- a/projectos.html
+++ b/projectos.html
@@ -34,6 +34,12 @@
             <p>Un sitio web sencillo creado con HTML y CSS</p>
             <a href="https://github.com/Nitox32/pagina_web.git" target="_blank">Ver en GitHub</a>
         </div>
+
+        <div class="project">
+            <h3>Matrices 3D</h3>
+            <p>Un programa que realiza operaciones con matrices 3D</p>
+            <a href="https://github.com/Nitox32/matrices_3d">Ver en GitHub</a>
+        </div>
     </section>
     <aside id="derecha">
         <table>
